using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class LobbyPlayer : MonoBehaviour
{
    public void SwapCharLeft() 
    {
        Debug.Log("Character swapped left");
    }

    public void SwapCharRight()
    {
        Debug.Log("Character swapped right");
    }
}
